# US-accidents

./: README.md  main.py  pyproject.toml
components/: holiday_table.py  hourlyByMonth_barplot.py  ids.py  introduction.py  layout.py  month_checkboxes.py  poi_barplot.py  state_dropdown.py  state_scattermapbox.py  tempMonthly_barplot.py  weekday_barplot.py
html-figures/: 1-holiday_figure.html  2-weekday_figure.html  3-hourlyMonth_figure.html  4-temp_monthly.html  6-poi_figure.html
