[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "accidents in the US - visualisation"
authors = ["Laura Ehlert Moreno <wi23171@lehre.dhbw-stuttgart.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
plotly = "^5.14.1"
matplotlib = "^3.8.3"
openpyxl = "^3.1.2"
holidays = "^0.45"
dash = "^2.16.1"
datetime = "^5.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
